; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_xlog.c_XLOGChooseNumBuffers.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_xlog.c_XLOGChooseNumBuffers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NBuffers = common dso_local global i32 0, align 4
@wal_segment_size = common dso_local global i32 0, align 4
@XLOG_BLCKSZ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @XLOGChooseNumBuffers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @XLOGChooseNumBuffers() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @NBuffers, align 4
  %3 = sdiv i32 %2, 32
  store i32 %3, i32* %1, align 4
  %4 = load i32, i32* %1, align 4
  %5 = load i32, i32* @wal_segment_size, align 4
  %6 = load i32, i32* @XLOG_BLCKSZ, align 4
  %7 = sdiv i32 %5, %6
  %8 = icmp sgt i32 %4, %7
  br i1 %8, label %9, label %13

9:                                                ; preds = %0
  %10 = load i32, i32* @wal_segment_size, align 4
  %11 = load i32, i32* @XLOG_BLCKSZ, align 4
  %12 = sdiv i32 %10, %11
  store i32 %12, i32* %1, align 4
  br label %13

13:                                               ; preds = %9, %0
  %14 = load i32, i32* %1, align 4
  %15 = icmp slt i32 %14, 8
  br i1 %15, label %16, label %17

16:                                               ; preds = %13
  store i32 8, i32* %1, align 4
  br label %17

17:                                               ; preds = %16, %13
  %18 = load i32, i32* %1, align 4
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
